Ultimata seconda sezione

--- a/index.html
+++ b/index.html
@@ -322,6 +322,136 @@
         </section>
         <!-- FINE PRIMA SEZIONE -->
 
+        <section class="container m-top-20">
+
+            <!-- RIGA UNO -->
+            <div class="row">
+
+                <div class="col-12">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- RIGA DUE -->
+            <div class="row">
+
+                <div class="col-1">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+                <div class="col-11">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- RIGA TRE -->
+            <div class="row">
+
+                <div class="col-2">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+                <div class="col-10">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+            </div>
+            <!-- RIGA QUATTRO -->
+            <div class="row">
+
+                <div class="col-3">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+                <div class="col-9">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- RIGA CINQUE -->
+            <div class="row">
+
+                <div class="col-4">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+                <div class="col-8">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- RIGA SEI -->
+            <div class="row">
+
+                <div class="col-5">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+                <div class="col-7">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- RIGA SETTE -->
+            <div class="row">
+
+                <div class="col-6">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+                <div class="col-6">
+
+                    <div class="col-box">
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+        <!-- FINE SECONDA SEZIONE -->
+
     </body>
 
 </html>
