Ultimata sezione tre

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
 
-        <section class="container">
+        <section class="container m-bottom-20">
 
             <!-- RIGA UNO -->
             <div class="row">
@@ -322,7 +322,7 @@
         </section>
         <!-- FINE PRIMA SEZIONE -->
 
-        <section class="container m-top-20">
+        <section class="container m-bottom-20">
 
             <!-- RIGA UNO -->
             <div class="row">
@@ -451,6 +451,123 @@
 
         </section>
         <!-- FINE SECONDA SEZIONE -->
+
+        <section class="container m-bottom-20">
+
+            <h2>Offset</h2>
+            
+            <!-- RIGA UNO -->
+            <div class="row">
+
+                <div class="col-offset-11 col-1">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA DUE -->
+            <div class="row">
+
+                <div class="col-offset-10 col-2">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA TRE -->
+            <div class="row">
+
+                <div class="col-offset-9 col-3">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA QUATTRO -->
+            <div class="row">
+
+                <div class="col-offset-8 col-4">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+            <!-- RIGA CINQUE -->
+            <div class="row">
+
+                <div class="col-offset-7 col-5">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA SEI -->
+            <div class="row">
+
+                <div class="col-offset-6 col-6">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA SETTE -->
+            <div class="row">
+
+                <div class="col-offset-5 col-7">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA OTTO -->
+            <div class="row">
+
+                <div class="col-offset-4 col-8">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA NOVE -->
+            <div class="row">
+
+                <div class="col-offset-3 col-9">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA DIECI -->
+            <div class="row">
+
+                <div class="col-offset-2 col-10">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- RIGA UNDICI -->
+            <div class="row">
+
+                <div class="col-offset-1 col-11">
+                    <div class="col-box">
+                    </div>
+                </div>
+
+            </div>
+            <!-- RIGA DODICI -->
+
+
+        </section>
 
     </body>
 
